--- a/turisTrazo/src/app/shared/components/home/home.component.html
+++ b/turisTrazo/src/app/shared/components/home/home.component.html
@@ -10,7 +10,7 @@
         <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
           <div class="pr-12">
             <h1 class="text-white font-semibold text-5xl">
-              TurizTraz
+              TurizTrazo
             </h1>
             <p class="mt-4 text-lg text-blueGray-200 text-white">
               This is a simple example of a Landing Page you can build using
