--- a/turisTrazo/src/app/shared/components/menu/menu.component.html
+++ b/turisTrazo/src/app/shared/components/menu/menu.component.html
@@ -20,25 +20,34 @@
     </div>
     <div [ngClass]="{'hidden': !isCollapsed}" class="items-center justify-between w-full md:flex md:w-auto md:order-1"
       id="navbar-cta">
-
       <ul
         class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a routerLink="/home"
-            class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-            aria-current="page">Home</a>
+          <a routerLink="/home" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: true}"
+            class="block py-2 pl-3 pr-4  rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Inicio</a>
         </li>
         <li>
-          <a href="#"
-            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+          <a routerLink="/sitio_interes" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: true}"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Sitios
+            Turísticos</a>
         </li>
         <li>
-          <a href="#"
-            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
+          <a routerLink="/tour" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: false}"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Reservar
+            Tour</a>
         </li>
         <li>
-          <a href="#"
-            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+          <a routerLink="fafsafas" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: true}"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Edúcate</a>
+        </li>
+        <li>
+          <a routerLink="fafsafas" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: true}"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Reseñas</a>
         </li>
       </ul>
     </div>
