--- a/turisTrazo/src/app/shared/pages/home-page/home-page.component.html
+++ b/turisTrazo/src/app/shared/pages/home-page/home-page.component.html
@@ -32,6 +32,8 @@
     <section class="pb-10 bg-blueGray-200 -mt-24">
         <div class="container mx-auto px-4">
             <shared-information></shared-information>
+
+            <!-- Aquí se pone todo lo que se quiera agregar a la landing -->
         </div>
     </section>
 </section>
