Tarjetas sitios-turisticos template

--- a/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
+++ b/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
@@ -1,1 +1,9 @@
-<p>sitio-interes-page works!</p>
+<div class="bg-transparent p-10">
+    <shared-card imageUrl="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg"
+        position="left" text="Texto en el lado izquierdo"></shared-card>
+</div>
+
+<div class="bg-transparent p-10">
+    <shared-card imageUrl="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg"
+        position="right" text="Texto en el lado izquierdo"></shared-card>
+</div>
