Componentes inicio cada opción

--- a/turisTrazo/src/app/resena-calificacion/pages/resena-page/resena-page.component.html
+++ b/turisTrazo/src/app/resena-calificacion/pages/resena-page/resena-page.component.html
@@ -1,1 +1,6 @@
-<p>resena-page works!</p>
+<resenas-inicio></resenas-inicio>
+
+<resena-registrar></resena-registrar> 
+
+<resenas-list></resenas-list>
+
