--- a/turisTrazo/src/app/tour/components/inicio/inicio.component.html
+++ b/turisTrazo/src/app/tour/components/inicio/inicio.component.html
@@ -8,12 +8,10 @@
                 <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
                     <div class="pr-12">
                         <h1 class="text-white font-semibold text-5xl">
-                            TurizTrazo
+                            Reserva y Disfruta.
                         </h1>
                         <p class="mt-4 text-lg text-blueGray-200 text-white">
-                            This is a simple example of a Landing Page you can build using
-                            Notus JS. It features multiple CSS components based on the
-                            Tailwind CSS design system.
+                            Vive momentos inolvidables
                         </p>
                     </div>
                 </div>
@@ -27,11 +25,4 @@
             </svg>
         </div>
     </div>
-    <section class="pb-10 bg-blueGray-200 -mt-24">
-        <div class="container mx-auto px-4">
-            <shared-information></shared-information>
-
-            <!-- Aquí se pone todo lo que se quiera agregar a la landing -->
-        </div>
-    </section>
 </section>
