--- a/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
+++ b/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
@@ -1,11 +1,17 @@
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-      alt="Your Company">
-    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
-  </div>
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 ">
 
-  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+
+
+  <div class="mt-0 sm:mx-auto sm:w-full sm:max-w-sm sh-per pr-10 pl-10 pt-7 pb-3 rounded-xl ">
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm"><a routerLink="/home"><i class="fa-solid fa-house fa-xl"></i></a>
+    </div>
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+        alt="Your Company">
+      <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Iniciar Sesión
+      </h2>
+    </div>
+    <br><br>
     <form class="space-y-6">
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
@@ -29,16 +35,17 @@
 
       <div>
         <button type="submit"
-          class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" (click)="prueba()">Sign
-          in</button>
+          class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+          (click)="prueba()">Ingresar</button>
       </div>
-      <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
+      <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Olvidé la contraseña</a>
 
     </form>
 
-    <p class="mt-10 text-center text-sm text-gray-500">
-      Not a member?
-      <a routerLink="/auth/register" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Register</a>
+    <p class="mt-10 text-center text-sm text-gray-900">
+      No tienes cuenta?
+      <a routerLink="/auth/register" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Crear
+        Cuenta</a>
     </p>
   </div>
 </div>
