--- a/turisTrazo/src/app/shared/components/card/card.component.html
+++ b/turisTrazo/src/app/shared/components/card/card.component.html
@@ -1,4 +1,4 @@
-<section class="bg-white dark:bg-gray-900" *ngIf="position === 'left' else right">
+<section class="bg-white dark:bg-gray-900 rounded-xl" *ngIf="position === 'left' else right">
   <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
     <ng-container>
       <div class="lg:col-span-7">
@@ -6,7 +6,7 @@
           <h1
             class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">
             Welcome To Harare City</h1>
-          <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">{{text}}
+          <p class="max-w-2xl mb-6 font-light text-white lg:mb-8 md:text-lg lg:text-xl dark:text-white">{{text}}
           </p>
           <a href="#"
             class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
@@ -27,7 +27,7 @@
 </section>
 
 <ng-template #right>
-  <section class="bg-white dark:bg-gray-900">
+  <section class="bg-white dark:bg-gray-900 rounded-xl">
     <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
       <ng-container>
         <div class="hidden lg:mt-0 lg:col-span-5 lg:flex rounded-lg">
