--- a/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
+++ b/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
@@ -1,9 +1,8 @@
-<div class="bg-transparent p-10">
-    <shared-card imageUrl="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg"
-        position="left" text="Texto en el lado izquierdo"></shared-card>
-</div>
+<sitio-interes-inicio></sitio-interes-inicio>
 
-<div class="bg-transparent p-10">
+
+<!-- <div class="bg-transparent mt-10 p-4" *ngFor="let pr of prueba ">
     <shared-card imageUrl="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg"
-        position="right" text="Texto en el lado izquierdo"></shared-card>
-</div>
+        [position]="'right'" [text]="pr.toString()" class="mt-auto"></shared-card>
+
+</div>- -->
