Conexión Front-back Reseñas y calificaciones

--- a/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
+++ b/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
@@ -6,8 +6,7 @@
     <div class="sm:mx-auto sm:w-full sm:max-w-sm"><a routerLink="/home"><i class="fa-solid fa-house fa-xl"></i></a>
     </div>
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-      <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-        alt="Your Company">
+      <img class="mx-auto h-20 w-auto" src="/./assets/logo.png" alt="TurisTrazo">
       <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Iniciar Sesión
       </h2>
     </div>
