--- a/turisTrazo/src/app/resena-calificacion/components/registrar-resena/registrar-resena.component.html
+++ b/turisTrazo/src/app/resena-calificacion/components/registrar-resena/registrar-resena.component.html
@@ -10,43 +10,31 @@
         <h1 class="text-3xl md:text-4xl font-semibold text-center mb-6">Escribe tu reseña</h1>
 
         <form>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <!-- Columna 1 -->
                 <div>
-                    <div class="mb-4">
-                        <label for="nombre" class="block text-gray-700 font-semibold mb-2">Nombre</label>
-                        <input type="text" id="nombre" name="nombre" class="w-full border rounded-lg px-4 py-2" />
-                    </div>
-                    <div class="mb-4">
-                        <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
-                        <input type="email" id="email" name="email" class="w-full border rounded-lg px-4 py-2" />
-                    </div>
-                </div>
 
-                <!-- Columna 2 -->
-                <div>
                     <div class="mb-4">
                         <label for="titulo" class="block text-gray-700 font-semibold mb-2">Título</label>
                         <input type="text" id="titulo" name="titulo" class="w-full border rounded-lg px-4 py-2" />
                     </div>
                     <div class="mb-4">
-                        <label for="barrio" class="block text-gray-700 font-semibold mb-2">Barrio</label>
-                        <input type="text" id="barrio" name="barrio" class="w-full border rounded-lg px-4 py-2" />
+                        <label for="tour" class="block text-gray-700 font-semibold mb-2">Tour</label>
+                        <select id="tour" name="tour" class="w-full border rounded-lg px-4 py-2">
+                            <option *ngFor="let tour of listTour" [value]="tour.id">{{tour.nombre}}</option>
+                        </select>
                     </div>
                 </div>
 
-                <!-- Columna 3 -->
                 <div>
+
                     <div class="mb-4">
-                        <label for="tour" class="block text-gray-700 font-semibold mb-2">Tour</label>
-                        <input type="text" id="tour" name="tour" class="w-full border rounded-lg px-4 py-2" />
-                    </div>
-                    <div class="mb-4">
-                        <label for="descripcion" class="block text-gray-700 font-semibold mb-2">Describe</label>
+                        <label for="descripcion" class="block text-gray-700 font-semibold mb-2">Descripción</label>
                         <textarea id="descripcion" name="descripcion"
-                            class="w-full border rounded-lg px-4 py-2"></textarea>
+                            class="w-full border h-32 rounded-lg px-4 py-2"></textarea>
                     </div>
                 </div>
+
             </div>
 
             <!-- Botón de agregar reseña -->
