--- a/turisTrazo/src/app/resena-calificacion/components/resenas/resenas.component.html
+++ b/turisTrazo/src/app/resena-calificacion/components/resenas/resenas.component.html
@@ -1,40 +1,56 @@
-<div class="flex mt-10 justify-center container m-auto ">
-    <div
-        class="bg-white rounded-lg shadow-xl  md:p-2 lg:p-2 w-full md:w-full lg:w-full mx-auto mb-4 p-10 pl-20 shadow-slate-950 ">
-        <div class="flex items-center mb-4">
-            <!-- Icono de usuario (puedes reemplazar la imagen con una URL) -->
-            <img class="w-12 h-12 rounded-full mr-4" src="https://via.placeholder.com/50" alt="Avatar" />
-
-            <!-- Nombre de la persona que publicó la reseña -->
-            <div>
-                <p class="text-lg font-semibold">{{resena?.turista?.nombre}}</p>
-                <p class="text-gray-600">5 minutes ago</p>
-            </div>
+<div
+  class="relative flex w-full max-w-[26rem] flex-col rounded-xl bg-transparent bg-clip-border text-gray-700   m-auto">
+  <div
+    class="relative mx-0 mt-4 flex items-center gap-4 overflow-hidden rounded-xl bg-transparent bg-clip-border pt-0 pb-8 text-gray-700 shadow-none m-auto">
+    <i class="fa-solid fa-user fa-2xl" style="color: #616161;"></i>
+    <div class="flex w-full flex-col gap-0.5">
+      <div class="flex items-center justify-between">
+        <h5 class="block font-sans text-base font-semibold leading-snug tracking-normal text-blue-gray-900 antialiased">
+          {{resena?.turista?.nombre | titlecase}}
+        </h5>
+        <div class="5 flex items-center gap-0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"
+            class="h-5 w-5 text-yellow-700">
+            <path fill-rule="evenodd"
+              d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"
+            class="h-5 w-5 text-yellow-700">
+            <path fill-rule="evenodd"
+              d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"
+            class="h-5 w-5 text-yellow-700">
+            <path fill-rule="evenodd"
+              d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"
+            class="h-5 w-5 text-yellow-700">
+            <path fill-rule="evenodd"
+              d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"
+            class="h-5 w-5 text-yellow-700">
+            <path fill-rule="evenodd"
+              d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z"
+              clip-rule="evenodd"></path>
+          </svg>
         </div>
-
-        <!-- Título de la reseña -->
-        <h2 class="text-xl md:text-2xl font-semibold mb-2">{{resena?.titulo}}</h2>
-
-        <!-- Calificación con estrellas (puedes personalizar el estilo) -->
-        <div class="flex items-center mb-4">
-            <div class="text-yellow-400">
-                <!-- Cambia "3" por la calificación deseada (1-5) -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                    <!-- Estrella rellena si la calificación es mayor o igual a 1, de lo contrario, estrella vacía -->
-                    <path
-                        d="M10 2l1.646 5.074h5.304l-4.27 3.107 1.598 4.925L10 12.689l-4.278 3.417 1.598-4.925-4.27-3.107h5.304L10 2z" />
-                </svg>
-            </div>
-            <!-- Repite el código de estrella según la calificación deseada -->
-            <!-- Ejemplo: si la calificación es 4, repite el código de estrella 4 veces -->
-        </div>
-
-        <!-- Contenido de la reseña -->
-        <p class="text-gray-700">{{resena?.descripcion}}</p>
-
-        <!-- Imagen (opcional, muestra solo si tienes una URL de imagen) -->
-        <div class="mt-4" *ngIf="imgagenUrl">
-            <img class="w-1/2" src="https://via.placeholder.com/400x200" alt="Imagen de la reseña" />
-        </div>
+      </div>
+      <p class="block font-sans text-sm font-light leading-relaxed text-blue-gray-900 antialiased">
+        {{resena?.fecha | date}} - Tour:{{resena?.tour?.nombre | titlecase}} - Guía:
+        {{resena?.tour?.guia?.usuario?.nombre | titlecase}}
+      </p>
     </div>
+  </div>
+  <div class="mb-6 p-0">
+    <h3 class="text-base md:text-base font-semibold mb-2">{{resena?.titulo}}</h3>
+    <p class="block font-sans text-base font-light leading-relaxed text-inherit antialiased">
+      {{resena?.descripcion}}
+    </p>
+  </div>
 </div>
