--- a/turisTrazo/src/app/resena-calificacion/components/registrar-resena/registrar-resena.component.html
+++ b/turisTrazo/src/app/resena-calificacion/components/registrar-resena/registrar-resena.component.html
@@ -7,22 +7,31 @@
 <div class="flex mt-10 justify-center container m-auto " *ngIf="mostrarFormularioResena">
     <div
         class="bg-white rounded-lg shadow-xl  md:p-2 lg:p-2 w-full md:w-full lg:w-full mx-auto mb-4 p-10 pl-20 shadow-gray-900">
-        <h1 class="text-3xl md:text-4xl font-semibold text-center mb-6">Escribe tu reseña</h1>
+        <h1 class="text-2xl md:text-2x1 font-semibold text-center mb-6">Escribe tu reseña</h1>
 
-        <form>
+        <form [formGroup]="formularioResena" (ngSubmit)="sendForm()">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <!-- Columna 1 -->
                 <div>
 
                     <div class="mb-4">
                         <label for="titulo" class="block text-gray-700 font-semibold mb-2">Título</label>
-                        <input type="text" id="titulo" name="titulo" class="w-full border rounded-lg px-4 py-2" />
+                        <input type="text" id="titulo" name="titulo" class="w-full border rounded-lg px-4 py-2"
+                            formControlName="titulo"
+                            [ngClass]="{ 'border-red-500': formularioResena!.get('titulo')?.invalid  && formSend }" />
+                        <ng-container *ngIf="formularioResena!.get('titulo')?.invalid && formSend">
+                            <ng-container *ngTemplateOutlet="errorMessage"></ng-container>
+                        </ng-container>
                     </div>
                     <div class="mb-4">
                         <label for="tour" class="block text-gray-700 font-semibold mb-2">Tour</label>
-                        <select id="tour" name="tour" class="w-full border rounded-lg px-4 py-2">
+                        <select id="tour" name="tour" class="w-full border rounded-lg px-4 py-2" formControlName="tour"
+                            [ngClass]="{ 'border-red-500': formularioResena!.get('tour')?.invalid  && formSend }">
                             <option *ngFor="let tour of listTour" [value]="tour.id">{{tour.nombre}}</option>
                         </select>
+                        <ng-container *ngIf="formularioResena!.get('tour')?.invalid && formSend">
+                            <ng-container *ngTemplateOutlet="errorMessage"></ng-container>
+                        </ng-container>
                     </div>
                 </div>
 
@@ -30,9 +39,38 @@
 
                     <div class="mb-4">
                         <label for="descripcion" class="block text-gray-700 font-semibold mb-2">Descripción</label>
-                        <textarea id="descripcion" name="descripcion"
-                            class="w-full border h-32 rounded-lg px-4 py-2"></textarea>
+                        <textarea id="descripcion" name="descripcion" formControlName="descripcion"
+                            class="w-full border h-10 rounded-lg px-4 py-2"
+                            [ngClass]="{ 'border-red-500': formularioResena!.get('descripcion')?.invalid  && formSend }">
+                            ></textarea>
+                        <ng-container *ngIf="formularioResena!.get('descripcion')?.invalid && formSend">
+                            <ng-container *ngTemplateOutlet="errorMessage"></ng-container>
+                        </ng-container>
                     </div>
+
+                    <div class="space-y-2">
+                        <label class="block text-gray-700">Selecciona un número de estrellas:</label>
+                        <div class="flex items-center space-x-2">
+                            <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
+                                <input type="radio" class="sr-only" [id]="'star-' + star"
+                                    formControlName="selectedRating" [value]="star" name="selectedRating">
+                                <label [for]="'star-' + star" class="text-2xl cursor-pointer"
+                                    [ngClass]="{'text-yellow-400': star <= (formularioResena!.get('selectedRating')!.value || 0), 'text-gray-300': star > (formularioResena!.get('selectedRating')!.value || 0)}">
+                                    &#9733;
+                                </label>
+                            </ng-container>
+                        </div>
+
+                        <p class="text-gray-700">Calificación seleccionada:
+                            {{ formularioResena!.get('selectedRating')?.value || 0 }}
+                        </p>
+                        <ng-container *ngIf="formularioResena!.get('selectedRating')?.invalid && formSend">
+                            <ng-container *ngTemplateOutlet="errorMessage"></ng-container>
+                        </ng-container>
+                    </div>
+
+
+
                 </div>
 
             </div>
@@ -46,3 +84,6 @@
         </form>
     </div>
 </div>
+<ng-template #errorMessage>
+    <div class="text-red-500 text-sm">Este campo es requerido.</div>
+</ng-template>
