--- a/turisTrazo/src/app/resena-calificacion/components/resenas/resenas.component.html
+++ b/turisTrazo/src/app/resena-calificacion/components/resenas/resenas.component.html
@@ -1,5 +1,5 @@
-<div
-  class="relative flex w-full max-w-[26rem] flex-col rounded-xl bg-transparent bg-clip-border text-gray-700   m-auto shadow-lg shadow-gray-600 p-5">
+<div 
+  class="relative flex w-full max-w-[26rem] flex-col rounded-xl bg-transparent bg-clip-border text-gray-700   shadow-lg shadow-gray-600 p-5">
   <div
     class="relative mx-0 mt-4 flex items-center gap-4 overflow-hidden rounded-xl bg-transparent bg-clip-border pt-0 pb-8 text-gray-700 shadow-none">
     <i class="fa-solid fa-user fa-2xl" style="color: #616161;"></i>
