--- a/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
+++ b/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
@@ -1,7 +1,4 @@
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 ">
-
-
-
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 bg-transparent">
   <div class="mt-0 sm:mx-auto sm:w-full sm:max-w-sm sh-per pr-10 pl-10 pt-7 pb-3 rounded-xl ">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm"><a routerLink="/home"><i class="fa-solid fa-house fa-xl"></i></a>
     </div>
@@ -11,24 +8,35 @@
       </h2>
     </div>
     <br><br>
-    <form class="space-y-6" [formGroup]="formLogin" (ngSubmit)="prueba()">
+    <form class="space-y-6" [formGroup]="formLogin" (ngSubmit)="sendFormLogin()">
       <div>
-        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
+        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo</label>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="off" required formControlName="email"
+          <input id="email" name="email" type="email" autocomplete="email" required formControlName="email"
+            [ngClass]="{ 'ring-red-500': formLogin!.get('email')?.invalid && formSend }"
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <ng-container *ngIf="formLogin!.get('email')?.hasError('required') && formSend">
+            <ng-container *ngTemplateOutlet="errorMessage"></ng-container>
+          </ng-container>
+          <ng-container *ngIf="formLogin!.get('email')?.hasError('email') && formSend">
+            <ng-container *ngTemplateOutlet="errorEmailMessage"></ng-container>
+          </ng-container>
         </div>
       </div>
 
       <div>
         <div class="flex items-center justify-between">
-          <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
+          <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Contraseña</label>
           <div class="text-sm">
           </div>
         </div>
         <div class="mt-2">
           <input id="password" name="password" type="password" autocomplete="off" required formControlName="password"
+            [ngClass]="{ 'ring-red-500': formLogin!.get('password')?.invalid && formSend }"
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <ng-container *ngIf="formLogin!.get('password')?.hasError('required') && formSend">
+            <ng-container *ngTemplateOutlet="errorMessage"></ng-container>
+          </ng-container>
         </div>
       </div>
 
@@ -47,3 +55,9 @@
     </p>
   </div>
 </div>
+<ng-template #errorMessage>
+  <div class="text-red-500 text-sm">Este campo es requerido.</div>
+</ng-template>
+<ng-template #errorEmailMessage>
+  <div class="text-red-500 text-sm">Ingrese un correo válido</div>
+</ng-template>
