--- a/turisTrazo/src/app/shared/components/menu/menu.component.html
+++ b/turisTrazo/src/app/shared/components/menu/menu.component.html
@@ -5,14 +5,20 @@
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">TurisTrazo</span>
     </a>
     <div class="flex md:order-2">
-      <button type="button" routerLink="/auth/login" *ngIf="!logueado"
+      <button type="button" routerLink="/auth/login" *ngIf="!isLoggued"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         Iniciar sesión</button>
-      <a *ngIf="logueado" [routerLink]="['/auth/profile_user', 1]" class="mr-3 m-auto">
-        <span class="text-white mr-1">{{nombre}}</span>
+
+
+
+      <a *ngIf="isLoggued" [routerLink]="['/auth/profile_user', 1]" class="mr-3 m-auto">
+        <span class="text-white mr-1">{{userLoggued?.nombre || ''}}</span>
         <i class="fa-solid fa-user" style="color: #ffffff"></i>
       </a>
 
+      <a routerLink="" (click)="logout()"> <i *ngIf="isLoggued" class="fa-solid fa-arrow-right-from-bracket"
+          style="color: #ffffff;"></i></a>
+          
       <button data-collapse-toggle="navbar-cta" type="button" (click)="toggleNavbar()"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
         aria-controls="navbar-cta" aria-expanded="false">
