Se agrega base para el módulo de sitios de interés

--- a/turisTrazo/src/app/shared/components/information/information.component.html
+++ b/turisTrazo/src/app/shared/components/information/information.component.html
@@ -1,47 +1,64 @@
 <div class="flex flex-wrap">
-    <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center">
-      <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
-        <div class="px-4 py-5 flex-auto">
-          <div
-            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
-            <i class="fas fa-award"></i>
-          </div>
-          <h6 class="text-xl font-semibold">Awarded Agency</h6>
-          <p class="mt-2 mb-4 text-blueGray-500">
-            Divide details about your product or agency work into parts.
-            A paragraph describing a feature will be enough.
-          </p>
+  <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center">
+    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+      <div class="px-4 py-5 flex-auto">
+        <div
+          class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-green-700">
+          <i class="fa-solid fa-plane" style="color: #ffffff;"></i>
         </div>
-      </div>
-    </div>
-    <div class="w-full md:w-4/12 px-4 text-center">
-      <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
-        <div class="px-4 py-5 flex-auto">
+        <h6 class="text-xl font-semibold">Sitios Turísticos</h6>
+        <p class="mt-2 mb-4 text-blueGray-500">
+          Contamos con gran cantidad de sitios turísticos para visitar
+
+        </p>
+        <a routerLink="/sitio_interes">
           <div
-            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-lightBlue-400">
-            <i class="fas fa-retweet"></i>
+            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-white">
+            <i class="fa-solid fa-arrow-right fa-lg" style="color: #000000;"></i>
           </div>
-          <h6 class="text-xl font-semibold">Free Revisions</h6>
-          <p class="mt-2 mb-4 text-blueGray-500">
-            Keep you user engaged by providing meaningful information.
-            Remember that by this time, the user is curious.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="pt-6 w-full md:w-4/12 px-4 text-center">
-      <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
-        <div class="px-4 py-5 flex-auto">
-          <div
-            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-emerald-400">
-            <i class="fas fa-fingerprint"></i>
-          </div>
-          <h6 class="text-xl font-semibold">Verified Company</h6>
-          <p class="mt-2 mb-4 text-blueGray-500">
-            Write a few lines about each one. A paragraph describing a
-            feature will be enough. Keep you user engaged!
-          </p>
-        </div>
+        </a>
       </div>
     </div>
   </div>
+  <div class="w-full md:w-4/12 px-4 text-center">
+    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+      <div class="px-4 py-5 flex-auto">
+        <div
+          class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-indigo-900">
+          <i class="fa-solid fa-earth-americas" style="color: #f5f5f5;"></i>
+        </div>
+        <h6 class="text-xl font-semibold">Nuestros Tours</h6>
+        <p class="mt-2 mb-4 text-blueGray-500">
+          Conoce nuestros Tours
+        </p>
+        <a routerLink="/tour/reservar">
+          <div
+            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-white">
+            <i class="fa-solid fa-arrow-right fa-lg" style="color: #000000;"></i>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="pt-6 w-full md:w-4/12 px-4 text-center">
+    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+      <div class="px-4 py-5 flex-auto">
+        <div
+          class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-green-700">
+          <a routerLink="/sitio_interes"> <i class="fa-solid fa-recycle" style="color: #ffffff;"></i></a>
+        </div>
+        <h6 class="text-xl font-semibold">Edúcate</h6>
+        <p class="mt-2 mb-4 text-blueGray-500">
+          Nuestros destinos tratamos de acompañarlos de una educación en turismo responsable, para preservar los sitios
+          para el bien común.
+        </p>
+        <a routerLink="/educate">
+          <div
+            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-white">
+            <i class="fa-solid fa-arrow-right fa-lg" style="color: #000000;"></i>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
