--- a/turisTrazo/src/app/shared/pages/home-page/home-page.component.html
+++ b/turisTrazo/src/app/shared/pages/home-page/home-page.component.html
@@ -1,4 +1,3 @@
-
 <section class="relative  bg-blueGray-50">
     <div class="relative pt-16 pb-32 flex content-center items-center justify-center min-h-screen-75">
         <div class="absolute top-0 w-full h-full bg-center bg-cover bg-image">
@@ -12,10 +11,9 @@
                             TurizTrazo
                         </h1>
                         <p class="mt-4 text-lg text-blueGray-200 text-white">
-                            This is a simple example of a Landing Page you can build using
-                            Notus JS. It features multiple CSS components based on the
-                            Tailwind CSS design system.
-                        </p>
+                            Somos una plataforma que te permitirá descubrir lugares únicos en la bella ciudad de
+                            Medellín, para que pases una experiencia inolvidable y duradera.
+                            <a routerLink="/auth/register" class="underline text-zinc-50">únete</a>
                     </div>
                 </div>
             </div>
