--- a/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
+++ b/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
@@ -1,8 +1,7 @@
 <sitio-interes-inicio></sitio-interes-inicio>
 
+<sitio-interes-shearch></sitio-interes-shearch>
 
-<!-- <div class="bg-transparent mt-10 p-4" *ngFor="let pr of prueba ">
-    <shared-card imageUrl="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg"
-        [position]="'right'" [text]="pr.toString()" class="mt-auto"></shared-card>
+<sitio-list class="pe-2"></sitio-list>
 
-</div>- -->
+<!-- <sitio-interes-detalle class=""></sitio-interes-detalle> -->
