Se agrega el componente de ver detalle en los sitios de interés

--- a/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
+++ b/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
@@ -4,4 +4,6 @@
 
 <sitio-list class="pe-2"></sitio-list>
 
-<!-- <sitio-interes-detalle class=""></sitio-interes-detalle> -->
+<!-- <sitio-interes-detalle class=""></sitio-interes-detalle>
+<br>
+<br> -->
