--- a/turisTrazo/src/app/sitio-interes/components/detalle-sitio/detalle-sitio.component.html
+++ b/turisTrazo/src/app/sitio-interes/components/detalle-sitio/detalle-sitio.component.html
@@ -1,15 +1,55 @@
-<section class="relative bg-blueGray-50">
+<section class="relative  bg-blueGray-50">
     <div class="relative pt-16 pb-32 flex content-center items-center justify-center min-h-screen-75">
-        <div class="absolute top-0 w-full h-full bg-center bg-cover bg-image">
+        <div class="absolute top-0 w-full h-full bg-center bg-cover"
+            [ngStyle]="{ 'background-image': 'url(' + sitio.imagenData + ')' }">
             <span id="blackOverlay" class="w-full h-full absolute opacity-75 bg-black"></span>
         </div>
-        <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px"
-            style="transform: translateZ(0px)">
-            <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
-                version="1.1" viewBox="0 0 2560 100" x="0" y="0">
-                <polygon class="text-blueGray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
-            </svg>
+        <div class="container relative mx-auto">
+            <div class="items-center flex flex-wrap">
+                <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
+                    <div class="pr-12">
+                        <h1 class="text-white font-semibold text-5xl text-transparent ">
+                            TurizTrazo
+                        </h1>
+                        <p class="mt-4 text-lg text-blueGray-200 text-white text-transparent">
+                            Somos una plataforma que te permitirá descubrir lugares únicos en la bella ciudad de
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="absolute inset-x-0 z-10 bg-white bg-opacity-75 h-96" style="width: 75%; top: calc(100% - 30%); left: 50%; transform: translateX(-50%);"> </div>
 </section>
+
+<section
+    class="text-center dark:bg-gray-900 dark:bg-opacity-95 w-full md:w-1/2 mx-auto  md:mt-[-7%] sm:mt-[-10%] mt-[-7%] px-4 py-8 md:py-0 relative z-20">
+    <br>
+    <h2 class="text-white font-bold text-5xl mt-4 text-opacity-90">{{ sitio.nombreSitio }}</h2>
+    <br>
+    <br>
+
+    <div class="flex flex-wrap justify-center">
+        <div class="flex items-center w-full sm:w-1/2 md:w-auto mb-4 md:mb-0 md:mr-4 mx-auto">
+            <div class="bg-white w-20 h-20 rounded-full opacity-75 mb-2 mr-2">
+                <!-- Icono -->
+            </div>
+            <p class="text-white text-sm text-opacity-75">Texto 1</p>
+        </div>
+        <div class="flex items-center w-full sm:w-1/2 md:w-auto mb-4 md:mb-0 md:mr-4 mx-auto">
+            <div class="bg-white w-20 h-20 rounded-full opacity-75 mb-2 mr-2">
+                <!-- Icono -->
+            </div>
+            <p class="text-white text-sm text-opacity-75">Texto 2</p>
+        </div>
+        <div class="flex items-center w-full sm:w-1/2 md:w-auto mx-auto">
+            <div class="bg-white w-20 h-20 rounded-full opacity-75 mb-2 mr-2">
+                <!-- Icono -->
+            </div>
+            <p class="text-white text-sm text-opacity-75">Texto 3</p>
+        </div>
+    </div>
+    <br>
+    <br>
+</section>
+
+<br>
+<br>
