--- a/turisTrazo/src/app/sitio-interes/components/sitio/sitio.component.html
+++ b/turisTrazo/src/app/sitio-interes/components/sitio/sitio.component.html
@@ -5,7 +5,7 @@
             style="background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 1));">
             <h2 class="text-white font-bold text-5xl mt-4">{{ titulo }}</h2>
             <button
-                class="mt-8 px-6 py-3 bg-white text-indigo-600 rounded-2xl hover:bg-indigo-600 hover:text-white text-lg font-bold">Ver
+                class="mt-8 px-6 py-3 bg-white text-indigo-600 rounded-2xl hover:bg-indigo-600 hover:text-white text-lg font-bold" (click)="details(id)">Ver
                 detalles</button>
         </div>
     </div>
