Se cambia estilos de las tarjetas de sitios turísticos y se agrega tarjetas (base) para tours

--- a/turisTrazo/src/app/sitio-interes/components/sitio/sitio.component.html
+++ b/turisTrazo/src/app/sitio-interes/components/sitio/sitio.component.html
@@ -1,12 +1,24 @@
 <div class="p-4">
-    <div class="relative">
-        <img [src]="imagen" alt="Imagen" class="w-full h-full object-cover">
-        <div class="absolute bottom-0 left-0 right-0 py-8 px-6"
-            style="background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 1));">
-            <h2 class="text-white font-bold text-5xl mt-4">{{ titulo }}</h2>
-            <button
-                class="mt-8 px-6 py-3 bg-white text-indigo-600 rounded-2xl hover:bg-indigo-600 hover:text-white text-lg font-bold" (click)="details(id)">Ver
-                detalles</button>
-        </div>
-    </div>
-</div>
+    <article class="rounded-xl bg-white p-3 shadow-lg hover:shadow-xl hover:transform hover:scale-105 duration-300 ">
+        <a [routerLink]="'/sitio_interes/'+id">
+            <div class="relative flex items-end overflow-hidden rounded-xl">
+                <img [src]="imagen" alt="Hotel Photo" />
+                <div
+                    class="flex items-center space-x-1.5 rounded-lg bg-blue-500 px-4 py-1.5 text-white duration-100 hover:bg-blue-600">
+
+                    <button class="text-sm" (click)="details(id)">Ver detalles</button>
+                </div>
+            </div>
+
+            <div class="mt-1 p-2">
+                <h2 class="text-slate-700 font-bold text-2xl ">{{ titulo }}</h2>
+                <div class="mt-3 flex items-end justify-between">
+                    <div
+                        class="flex items-center space-x-1.5 rounded-lg bg-blue-500 px-4 py-1.5 text-white duration-100 hover:bg-blue-600">
+
+                        <a [routerLink]="'/sitio_interes/'+id"> <button class="text-sm">Ver detalles</button></a>
+                    </div>
+                </div>
+            </div>
+        </a>
+    </article>
