--- a/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
+++ b/turisTrazo/src/app/sitio-interes/pages/sitio-interes-page/sitio-interes-page.component.html
@@ -1,8 +1,7 @@
 <sitio-interes-inicio></sitio-interes-inicio>
 
-<sitio-interes-shearch></sitio-interes-shearch>
 
-<sitio-list class="pe-2"></sitio-list>
+<sitio-list class="pe-2" [filtro]="terminoBusqueda"></sitio-list>
 
 <!-- <sitio-interes-detalle class=""></sitio-interes-detalle>
 <br>
