--- a/turisTrazo/src/app/turismo-responsable/pages/turismo-responsable-page/turismo-responsable-page.component.html
+++ b/turisTrazo/src/app/turismo-responsable/pages/turismo-responsable-page/turismo-responsable-page.component.html
@@ -1,1 +1,5 @@
 <turismo-responsable-inicio></turismo-responsable-inicio>
+
+<div>
+    <turismo-responsable-information></turismo-responsable-information>
+</div>
