--- a/turisTrazo/src/app/shared/components/information/information.component.html
+++ b/turisTrazo/src/app/shared/components/information/information.component.html
@@ -13,7 +13,7 @@
         </p>
         <a routerLink="/sitio_interes">
           <div
-            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-white">
+            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-neutral-500 bg-opacity-60">
             <i class="fa-solid fa-arrow-right fa-lg" style="color: #000000;"></i>
           </div>
         </a>
@@ -33,7 +33,7 @@
         </p>
         <a routerLink="/tour/reservar">
           <div
-            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-white">
+            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-neutral-500 bg-opacity-60">
             <i class="fa-solid fa-arrow-right fa-lg" style="color: #000000;"></i>
           </div>
         </a>
@@ -54,7 +54,7 @@
         </p>
         <a routerLink="/educate">
           <div
-            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-white">
+            class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-neutral-500 bg-opacity-60">
             <i class="fa-solid fa-arrow-right fa-lg" style="color: #000000;"></i>
           </div>
         </a>
