--- a/turisTrazo/src/app/sitio-interes/components/detalle-sitio/detalle-sitio.component.html
+++ b/turisTrazo/src/app/sitio-interes/components/detalle-sitio/detalle-sitio.component.html
@@ -1,4 +1,4 @@
-<section class="relative  bg-blueGray-50">
+<section class="relative  bg-blueGray-50" *ngIf="validado">
     <div class="relative pt-16 pb-32 flex content-center items-center justify-center min-h-screen-75">
         <div class="absolute top-0 w-full h-full bg-center bg-cover"
             [ngStyle]="{ 'background-image': 'url(' + sitio.imagenData + ')' }">
@@ -8,10 +8,10 @@
             <div class="items-center flex flex-wrap">
                 <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
                     <div class="pr-12">
-                        <h1 class="text-white font-semibold text-5xl text-transparent ">
+                        <h1 class=" font-semibold text-5xl text-transparent ">
                             TurizTrazo
                         </h1>
-                        <p class="mt-4 text-lg text-blueGray-200 text-white text-transparent">
+                        <p class="mt-4 text-lg text-blueGray-200  text-transparent">
                             Somos una plataforma que te permitirá descubrir lugares únicos en la bella ciudad de
                     </div>
                 </div>
@@ -20,7 +20,7 @@
     </div>
 </section>
 
-<section
+<section *ngIf="validado"
     class="text-center dark:bg-gray-900 dark:bg-opacity-95 w-full md:w-1/2 mx-auto  md:mt-[-7%] sm:mt-[-10%] mt-[-7%] px-4 py-8 md:py-0 relative z-20">
     <br>
     <h2 class="text-white font-bold text-5xl mt-4 text-opacity-90">{{ sitio.nombreSitio }}</h2>
@@ -29,27 +29,56 @@
 
     <div class="flex flex-wrap justify-center">
         <div class="flex items-center w-full sm:w-1/2 md:w-auto mb-4 md:mb-0 md:mr-4 mx-auto">
-            <div class="bg-white w-20 h-20 rounded-full opacity-75 mb-2 mr-2">
-                <!-- Icono -->
+            <div class="bg-white w-14 h-14 rounded-full flex items-center justify-center opacity-75 mb-2 mr-2">
+                <i class="fa-solid fa-location-dot fa-2xl"></i>
             </div>
-            <p class="text-white text-sm text-opacity-75">Texto 1</p>
+            <h2 class="text-white text-lg font-bold">Ubicación
+                <br>
+                <p class="text-sm font-semibold">
+                    {{sitio.barrioMedellin.nombre}}
+
+                </p>
+            </h2>
+
         </div>
         <div class="flex items-center w-full sm:w-1/2 md:w-auto mb-4 md:mb-0 md:mr-4 mx-auto">
-            <div class="bg-white w-20 h-20 rounded-full opacity-75 mb-2 mr-2">
-                <!-- Icono -->
+            <div class="bg-white w-14 h-14 rounded-full flex items-center justify-center opacity-75 mb-2 mr-2">
+                <i class="fa-solid fa-temperature-half fa-2xl "></i>
             </div>
-            <p class="text-white text-sm text-opacity-75">Texto 2</p>
+            <h2 class="text-white text-lg font-bold">Temperatura
+                <br>
+                <p class="text-sm font-semibold">
+                    {{sitio.barrioMedellin.nombre}}
+
+                </p>
+            </h2>
         </div>
         <div class="flex items-center w-full sm:w-1/2 md:w-auto mx-auto">
-            <div class="bg-white w-20 h-20 rounded-full opacity-75 mb-2 mr-2">
-                <!-- Icono -->
+            <div class="bg-white w-14 h-14 rounded-full flex items-center justify-center opacity-75 mb-2 mr-2">
+                <i class="fa-regular fa-clock fa-2xl"></i>
             </div>
-            <p class="text-white text-sm text-opacity-75">Texto 3</p>
+            <h2 class="text-white text-lg font-bold">Horario
+                <br>
+                <p class="text-sm font-semibold">
+                    {{sitio.barrioMedellin.nombre}}
+
+                </p>
+            </h2>
         </div>
     </div>
     <br>
     <br>
 </section>
 
-<br>
-<br>
+<section>
+    <br><br>
+    <shared-slider></shared-slider>
+</section>
+
+<section class="w-3/5 m-auto">
+    <br><br>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sint voluptas numquam laudantium dolorem unde
+        minima odio aspernatur, esse amet nostrum nesciunt id hic eum eveniet atque et accusamus molestias.
+    </p>
+</section>
