--- a/turisTrazo/src/app/sitio-interes/components/shearch/shearch.component.html
+++ b/turisTrazo/src/app/sitio-interes/components/shearch/shearch.component.html
@@ -1,10 +1,12 @@
 <div class="mx-auto w-3/4 text-center mt-10 pe-10">
     <br>
-    <h1 class="text-indigo-600 font-bold text-4xl py-2 custom-font">Busca por comuna o nombre</h1>
-    <br>
+    <div class="mt-4  bg-white">
+        <h1 class="text-center text-2xl font-bold text-gray-800">Búsqueda por nombre</h1>
+    </div> <br>
     <div class="mt-3 mx-auto max-w-5xl flex">
-        <input type="text" placeholder="Buscar..." class="w-full px-4 py-2 border border-indigo-600 rounded-l-lg">
-        <button class="px-4 py-2 bg-indigo-600 text-white rounded-r-lg">Buscar</button>
+        <input type="text" placeholder="Buscar..." [(ngModel)]="input"
+            class="w-full px-4 py-2 border border-indigo-600 rounded-l-lg" (keyup)="search()">
+        <button class="px-4 py-2 bg-indigo-600 text-white rounded-r-lg" type="submit" (click)="search()">Buscar</button>
     </div>
     <br>
 </div>
