--- a/turisTrazo/src/app/shared/components/slider/slider.component.html
+++ b/turisTrazo/src/app/shared/components/slider/slider.component.html
@@ -1,3 +1,1 @@
-<div class="w-3/5 h-2/4 m-auto">
-  <image-slider [slides]="slides"></image-slider>
-</div>
+<image-slider [slides]="images"></image-slider>
