--- a/turisTrazo/src/app/sitio-interes/components/sitio-list/sitio-list.component.html
+++ b/turisTrazo/src/app/sitio-interes/components/sitio-list/sitio-list.component.html
@@ -1,7 +1,7 @@
 <sitio-interes-shearch (terminoBusquedaEmitter)="filtrarSitios($event)"></sitio-interes-shearch>
 
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-4">
-    <div *ngFor="let item of sitiosFiltrados" style="height: 30rem;">
+    <div *ngFor="let item of sitiosFiltrados">
         <sitio-interes-card [imagen]="item.imagenData || '' " [titulo]="item.nombreSitio"
             [id]="item.id"></sitio-interes-card>
     </div>
