--- a/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
+++ b/turisTrazo/src/app/auth/pages/login-page/login-page.component.html
@@ -44,7 +44,8 @@
         <button type="submit"
           class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Ingresar</button>
       </div>
-      <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Olvidé la contraseña</a>
+      <a class="font-semibold text-indigo-600 hover:text-indigo-500 cursor-pointer" (click)="resetPassword()">Olvidé la
+        contraseña</a>
 
     </form>
 
@@ -55,6 +56,8 @@
     </p>
   </div>
 </div>
+
+
 <ng-template #errorMessage>
   <div class="text-red-500 text-sm">Este campo es requerido.</div>
 </ng-template>
