--- a/turisTrazo/src/app/shared/components/information/information.component.html
+++ b/turisTrazo/src/app/shared/components/information/information.component.html
@@ -31,7 +31,7 @@
         <p class="mt-2 mb-4 text-blueGray-500">
           Conoce nuestros Tours
         </p>
-        <a routerLink="/tour/reservar">
+        <a routerLink="/tour">
           <div
             class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-neutral-500 bg-opacity-60">
             <i class="fa-solid fa-arrow-right fa-lg" style="color: #000000;"></i>
