--- a/turisTrazo/src/app/shared/components/menu/menu.component.html
+++ b/turisTrazo/src/app/shared/components/menu/menu.component.html
@@ -46,7 +46,7 @@
         </li>
         <li>
           <a routerLink="/tour" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
-            [routerLinkActiveOptions]="{exact: false}"
+            [routerLinkActiveOptions]="{exact: true}"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Reservar
             Tour</a>
         </li>
@@ -59,6 +59,23 @@
           <a routerLink="/resena_calificacion" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
             [routerLinkActiveOptions]="{exact: true}"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Reseñas</a>
+        </li>
+        <li *ngIf="guiaLoggued">
+          <a routerLink="/mensajes" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: true}"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Mensajes</a>
+        </li>
+        <li *ngIf="adminLoggued">
+          <a routerLink="/gestionar" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: true}"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Gestionar
+            Recursos</a>
+        </li>
+        <li *ngIf="guiaLoggued">
+          <a routerLink="/tour/register" routerLinkActive="bg-indigo-600 md:bg-transparent md:text-indigo-600"
+            [routerLinkActiveOptions]="{exact: true}"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Crear
+            Tour</a>
         </li>
       </ul>
     </div>
