--- a/turisTrazo/src/styles.css
+++ b/turisTrazo/src/styles.css
@@ -1,4 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+    /* You can add global styles to this file, and also import other style files */
+    @import "tailwindcss/base";
+    @import "tailwindcss/components";
+    @import "tailwindcss/utilities";
+    @import '/node_modules/@swimlane/ngx-datatable/index.css';
+    @import '/node_modules/@swimlane/ngx-datatable/themes/material.css';
+    @import '/node_modules/@swimlane/ngx-datatable/assets/icons.css';
